--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 </head>
 
 <body>
+    <section class="half width">
 
+        <div id="show-bg">
+            <h1>
+                Lets Help Those Who Are More In Need
+            </h1>
+            <p>We should provide relief to the flood victims in sylhet-sunamganj.areeange their accommodation and
+                stay
+                by their side.so everyone help the poor.</p>
+
+
+            <a class="link-button" href="https://www.facebook.com/search/top/?q=Tasneem%20Islam">Doneat Now </a>
+        </div>
+    </section>
 </body>
 
 </html>
