--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
             <a class="link-button" href="https://www.facebook.com/search/top/?q=Tasneem%20Islam">Doneat Now </a>
         </div>
     </section>
+    <section>
+        <div>
+            <h2>Donate today</h2>
+            <p id="today">today need to help them today because they have a lot of problems so we should help them.we
+                all extened a
+                helping hand.</p>
+        </div>
+    </section>
 </body>
 
 </html>
