--- a/index.html
+++ b/index.html
@@ -31,7 +31,24 @@
                 all extened a
                 helping hand.</p>
         </div>
+
     </section>
+    <section>
+        <div>
+            <form action="">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="text">
+
+            </form>
+
+        </div>
+    </section>
+    <div>
+        <h4>other amount (taka)</h4>
+        <a class="link-button" href="https://www.youtube.com/watch?v=fNcJuPIZ2WE">Donate now</a>
+    </div>
 </body>
 
 </html>
