--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <section class="half width">
+    <section>
 
         <div id="show-bg">
-            <h1>
+            <h1 class="helpless">
                 Lets Help Those Who Are More In Need
             </h1>
             <p>We should provide relief to the flood victims in sylhet-sunamganj.areeange their accommodation and
@@ -21,12 +21,14 @@
                 by their side.so everyone help the poor.</p>
 
 
-            <a class="link-button" href="https://www.facebook.com/search/top/?q=Tasneem%20Islam">Doneat Now </a>
+            <div>
+                <a class="link-button" href="https://www.facebook.com/search/top/?q=Tasneem%20Islam">Doneat Now </a>
+            </div>
         </div>
     </section>
     <section>
-        <div>
-            <h2>Donate today</h2>
+        <div class="flex">
+            <h6> Donate today :</h6>
             <p id="today">today need to help them today because they have a lot of problems so we should help them.we
                 all extened a
                 helping hand.</p>
@@ -34,20 +36,35 @@
 
     </section>
     <section>
-        <div>
-            <form action="">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
+        <div class="felxible">
+            <button class="git">100k</button>
+            <div id="done">
+                <button class="add">300k</button>
+                <div id="okey">
+                    <button class="bye">500k</button>
+                    <div>
+                        <button class="body">1000k</button>
+                    </div>
+                    <div>
 
-            </form>
-
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <div>
         <h4>other amount (taka)</h4>
-        <a class="link-button" href="https://www.youtube.com/watch?v=fNcJuPIZ2WE">Donate now</a>
+        <div class="flex">
+            <a class="link-button" href="https://www.facebook.com/search/top/?q=Tasneem%20Islam">Doneat Now </a>
+        </div>
+
+    </div>
+
+    <div>
+        <h1 id="deploy">Our Donate plan </h1>
+    </div>
+    <div>
+
     </div>
 </body>
 
