--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <h1 class="helpless">
                 Lets Help Those Who Are More In Need
             </h1>
-            <p>We should provide relief to the flood victims in sylhet-sunamganj.areeange their accommodation and
+            <p>We should provide relief to the flood victims in sylhet-sunamganj.areeange their
+                accommodation and
                 stay
                 by their side.so everyone help the poor.</p>
 
@@ -27,9 +28,11 @@
         </div>
     </section>
     <section>
-        <div class="flex">
+        <div class="bennar">
             <h6> Donate today :</h6>
-            <p id="today">today need to help them today because they have a lot of problems so we should help them.we
+        </div>
+        <div class="flex">
+            <p id="today">today need to help them todaybecause they have a lot of problems so we should help them.we
                 all extened a
                 helping hand.</p>
         </div>
@@ -63,9 +66,62 @@
     <div>
         <h1 id="deploy">Our Donate plan </h1>
     </div>
-    <div>
+    <div class="banner-coniter">
 
-    </div>
+        <div class="seelet">
+            <div class="card">
+                <div class="copy">
+                    <img src="./food.png"></img>
+                    <h2 class="hleping">Food for a famliy</h2>
+                    <p class="family">
+                        our plan is to stand bt the people of sylhelt and help them and provide them with food and
+                        shelter
+                        because many are not eating so help them
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="source">
+
+            <div class="fream">
+                <div class="style">
+                    <div class="row">
+                        <img src="./shelter.png"></img>
+                        <h2 class="main">
+                            shelter a family
+                        </h2>
+                        <p class="time">
+                            the people of sylhet should all be by their side in this difficult time.if we all stand by
+                            one man
+                            they will have confidence.let us all stand by them.
+                        </p>
+
+                    </div>
+
+
+                </div>
+
+            </div>
+            <div class="baby">
+                <div class="web">
+                    <div class="best">
+                        <div class="my">
+                            <img src="./Frame-1.png"></img>
+                            <h2 class="well">
+                                Education for a child
+                            </h2>
+
+                            <p>education is very improntent for child becuse their are bangladesh futuer. education is
+                                the backbone of the nation so we must ensure the eduction of every child.
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
 </body>
 
 </html>
